# wemake-django-template

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  cookiecutter.json  demo.py  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/: FUNDING.yml  dependabot.yml  renovate.json
docs/: development-process.md  gitlab-ci.md  linters.md
doctrees/: environment.pickle  index.doctree
hooks/: post_gen_project.py  pre_gen_project.py
tests/: build.sh  build_docs.sh  conftest.py  test_github.sh  test_gitlab.sh  test_integration.sh  test_project_generation.py  testforlogging.py
{{ cookiecutter.project_name }}/: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pytest.ini  setup.cfg
{{cookiecutter.project_name}}/: .dockerignore  .editorconfig  .env.docker  .gitignore  .gitlab-ci.yml  .importlinter  .pre-commit-config.yaml  .python-version  .yamllint  .yamllint-light  Dockerfile  Pipfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  schemathesis.toml  setup.cfg
{{cookiecutter.project_name}}/.gitlab/issue_templates/: Bug.md  Feature.md
{{cookiecutter.project_name}}/.gitlab/merge_request_templates/: Default.md
{{cookiecutter.project_name}}/config/: .env.template  secret.env.template
{{cookiecutter.project_name}}/docker/: ci.sh  docker-compose.prod.yml
{{cookiecutter.project_name}}/docker/caddy/: Caddyfile  Dockerfile  ci.sh
{{cookiecutter.project_name}}/docker/django/: Dockerfile  ci.sh  entrypoint.sh  gunicorn.sh  gunicorn_config.py  healthcheck.sh  pip_constraint.txt  wait-for-command.sh
{{cookiecutter.project_name}}/docs/: Makefile  README.md  README.rst  conf.py  index.rst  make.bat  requirements.txt
{{cookiecutter.project_name}}/docs/_pages/: configuration.rst  dependencies.rst  development-process.rst  docker.rst  gitlab-ci.rst  going-to-production.rst  linters.md  linters.rst  production.rst  pycharm.rst  qa.md  qa.rst  quickstart.rst
{{cookiecutter.project_name}}/docs/_pages/template/: configuration.rst  dependencies.rst  development-process.rst  docker.rst  documentation.rst  gitlab-ci.rst  going-to-production.rst  linters.rst  production.rst  pycharm.rst  qa.rst  quickstart.rst
{{cookiecutter.project_name}}/docs/_templates/: moreinfo.html
{{cookiecutter.project_name}}/docs/pages/template/: dependencies.rst  development-process.rst  development.rst  django.rst  documentation.rst  faq.rst  gitlab-ci.rst  linters.rst  overview.rst  production-checklist.rst  production.rst  security.rst  testing.rst  tips.rst  troubleshooting.rst  upgrading-template.rst
{{cookiecutter.project_name}}/main_app/: admin.py  apps.py  models.py  urls.py
{{cookiecutter.project_name}}/main_app/templates/main_app/: index.html
{{cookiecutter.project_name}}/main_app/tests/: test_views.py
{{cookiecutter.project_name}}/pytest-picked/: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.rst  appveyor.yml  pytest_picked.py  setup.py  tox.ini
{{cookiecutter.project_name}}/pytest-picked/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.project_name}}/pytest-picked/tests/: test_pytest_picked.py
{{cookiecutter.project_name}}/scripts/: create_dev_database.sql
{{cookiecutter.project_name}}/server/: __init__.py  asgi.py  celery.py  implemented.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/server/apps/main/: __init__.py  admin.py  api.py  models.py  rest_api.py  serializers.py  tasks.py  urls.py  views.py
{{cookiecutter.project_name}}/server/apps/main/api/: urls.py  views.py
{{cookiecutter.project_name}}/server/apps/main/infra/: dtos.py  mappers.py  repository.py
{{cookiecutter.project_name}}/server/apps/main/logic/: __init__.py  constants.py  value_objects.py
{{cookiecutter.project_name}}/server/apps/main/logic/usecases/: blogpost_create.py  blogpost_get.py
{{cookiecutter.project_name}}/server/apps/main/migrations/: 0001_initial.py  0002_adds_meta_to_blogpost_20200508_0852.py
{{cookiecutter.project_name}}/server/apps/main/static/main/css/: index.css
{{cookiecutter.project_name}}/server/apps/main/templates/main/: index.html
{{cookiecutter.project_name}}/server/common/: di.py  dtos.py
{{cookiecutter.project_name}}/server/main_app/: apps.py  urls.py  views.py
{{cookiecutter.project_name}}/server/main_app/logics/: __init__.py
{{cookiecutter.project_name}}/server/main_app/templates/main_app/: index.html
{{cookiecutter.project_name}}/server/main_app/tests/: test_views.py
{{cookiecutter.project_name}}/server/settings/: __init__.py
{{cookiecutter.project_name}}/server/settings/components/: __init__.py  api.py  caches.py  common.py  csp.py  logging.py
{{cookiecutter.project_name}}/server/settings/environments/: __init__.py  development.py  local.py.template  production.py  testing.py
{{cookiecutter.project_name}}/sql/: drop_database.sql
{{cookiecutter.project_name}}/templates/txt/: humans.txt  robots.txt
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/plugins/: django_settings.py  tracecov_map.py
{{cookiecutter.project_name}}/tests/plugins/main/: main_templates.py
{{cookiecutter.project_name}}/tests/test_apps/: test_schema.py
{{cookiecutter.project_name}}/tests/test_apps/test_main/test_api/: test_blog_post_create.py  test_blog_post_get.py
{{cookiecutter.project_name}}/tests/test_apps/test_main/test_models/: test_blog_post_model.py
{{cookiecutter.project_name}}/tests/test_apps/test_main/test_models/test_migrations/: test_blog_post_migrations.py
{{cookiecutter.project_name}}/tests/test_apps/test_main/test_views/: test_index_view.py
{{cookiecutter.project_name}}/tests/test_main_app/: test_views.py
{{cookiecutter.project_name}}/tests/test_server/: test_admin.py  test_logging.py  test_urls.py
(+76 files in other folders)
