[tool.poetry]
name = "wemake-django-template"
description = "Bleeding edge django template focused on code quality and security"
version = "0.1.0"
readme = "README.md"
authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

license = "MIT"

classifiers = [
  "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.11"

cookiecutter = "^2.5"
jinja2-git = "^1.3"

[tool.poetry.group.test.dependencies]
binaryornot = "^0.4"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.7"
nitpick = "^0.35"

pytest = "^7.4"
pytest-randomly = "^3.15"
pytest-cookies = "^0.7"

docker-image-size-limit = "^1.0"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.17.0/styles/nitpick-style.toml"
