[tool.poetry]
name = "wemake-django-template"
description = "Bleeding edge django template focused on code quality and security"
version = "0.1.0"
readme = "README.md"
authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

license = "MIT"

classifiers = [
  "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.11"

cookiecutter = "^2.6"
jinja2-git = "^1.4"

[tool.poetry.group.test.dependencies]
binaryornot = "^0.4"

wemake-python-styleguide = "^1.0"
flake8-pytest-style = "^2.0"
nitpick = "^0.35"

pytest = "^8.3"
pytest-randomly = "^3.16"
pytest-cookies = "^0.7"

docker-image-size-limit = "^2.0"
tomli = "^2.2"


[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.17.0/styles/nitpick-style.toml"
